--- a/public/css/section-4.css
+++ b/public/css/section-4.css
@@ -4,16 +4,12 @@
 }
 .content-wrapper {
     background-color: var(--main-color);
-    height: calc(100vh - 77px);
-    position: relative;
-    margin: 0;  
+    padding: 20px 30px 30px 0;
+    margin: 0;
 }
 .content-wrapper .container {
     width: var(--main-width);
     padding: 0;
-    position: absolute;
-    left: 80px;
-    top: 30px;
 }
 .content-wrapper .container .btn {
     height: 60px;
